data/derived/sp14/progs/unify/prog2199.ml.out
Characters 85-87:
  | Sine ex -> sin(pi*. eval ex )
                             ^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
